# Hew

./: ARQUIVOS_IMPORTANTES.txt  CMakeLists.txt  CONCLUSAO_PROJETO.md  DESENVOLVIMENTO.md  GUIA_COMPLETO.md  LEIA-ME-PRIMEIRO.txt  README.md  README_PT.md  SUMARIO_PROJETO.txt  Toolchain-mingw-w64-x86_64.cmake  build-all.sh  build-windows-portable.sh  build-windows.sh  mingw-g++-wrapper.sh  package-windows.sh  setup.sh
assets/: vertex.glsl
build-windows-cross/: CMakeCache.txt  Makefile  cmake_install.cmake
build-windows-portable/: Makefile.mingw  portable_stub.cpp
build-windows-portable/assets/: fragment.glsl
build-windows-portable/include/: Cube.h  GameState.h  Player.h  Renderer.h  Shader.h
build-windows-portable/src/: Block.cpp  Camera.cpp  GameState.cpp  Renderer.cpp  Shader.cpp  World.cpp  main.cpp
include/: Block.h  Camera.h  Cube.h  InputManager.h  Raycaster.h  Renderer.h  World.h
src/: Cube.cpp  InputManager.cpp  Player.cpp  Raycaster.cpp  Renderer.cpp  Shader.cpp
windows/: GUIA_WINDOWS.md  README.txt  VERSION.txt  install.bat  run.bat
